ensure path covered when loading jupyter notebook

--- a/salvus/page/_jupyter.sass
+++ b/salvus/page/_jupyter.sass
@@ -10,7 +10,8 @@
   background: white
   position: fixed
   width: 100%
-  left: 0px;
+  left: 0px
+  min-height: 10em   /* ensure path is covered while loading notebook */
 
 .smc-jupyter-notebook-buttons-hidden-xs
   position: absolute
